Feat: dark mode

--- a/static/index.html
+++ b/static/index.html
@@ -5,8 +5,15 @@
 	<title></title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="styles.css" rel="stylesheet" type="text/css">
 	<script src="https://unpkg.com/htmx.org@1.9.4"></script>
 </head>
+
+<header>
+	<div id="user-header">
+		<a href="/login">Login</a>
+	</div>
+</header>
 
 <body>
 	<h1>Hello!</h1>
