--- a/static/register/index.html
+++ b/static/register/index.html
@@ -9,27 +9,29 @@
 	<link href="/styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body hx-boost="true">
+<body>
 	<div id="content">
 		<div id="login">
-			<h1>Login</h1>
+			<h1>Create a new account!</h1>
 			<form>
 				<div class="form-group">
 					<label for="username">Username </label>
-					<input class="form-input" type="text" name="username" id="username" required />
+					<input type="text" name="username" id="username" required class="form-input" />
 				</div>
 				<div class="form-group">
 					<label for="password">Password </label>
 					<input type="password" name="password" id="password" required class="form-input" />
 				</div>
+				<div class="form-group">
+					<input type="checkbox" name="terms" id="terms" required class="form-input" />
+					<label for="password">I accept the terms and conditions</label>
+				</div>
 				<div>
-					<button hx-post="/api/login" class="create-button" hx-swap="none"> Login
+					<button hx-post="/api/register" class="create-button"> Register
 					</button>
 				</div>
 			</form>
 		</div>
-		<h2>Don't have an account?</h2>
-		<a href="/register">Register</a>
 	</div>
 </body>
 
