--- a/static/register/index.html
+++ b/static/register/index.html
@@ -16,7 +16,9 @@
 			<form>
 				<div class="form-group">
 					<label for="username">Username </label>
-					<input type="text" name="username" id="username" required class="form-input" />
+					<input hx-get="/api/register" hx-target="next .error" hx-trigger="change, keyup delay:400ms"
+						type="text" name="username" id="username" required class="form-input" />
+					<span class="error"></span>
 				</div>
 				<div class="form-group">
 					<label for="password">Password </label>
