Add filter by creator

--- a/static/login/index.html
+++ b/static/login/index.html
@@ -32,8 +32,10 @@
 				</div>
 			</form>
 		</div>
-		<h2>Don't have an account?</h2>
-		<a href="/register">Register</a>
+		<div class="centered-middle">
+			<h2>Don't have an account?</h2>
+			<a href="/register">Register</a>
+		</div>
 	</div>
 </body>
 
